Fix scrollbar issue

--- a/src/main/resources/App.css
+++ b/src/main/resources/App.css
@@ -184,6 +184,7 @@ a:active {
 #searchResults {
     border: 1px solid #000;
     opacity: 0.9;
+    display: inline-block;
 }
 
 #searchResults tr:nth-child(even) {
